# libgrpc

./: CMakeLists.txt  LICENSE  build_win64.bat  how_to_install_grpc.txt
ACT/: LibGRPCWrapper.xml  generateInterfaces.bat
Headers/CppDynamic/: libgrpcwrapper_dynamic.h  libgrpcwrapper_dynamic.hpp  libgrpcwrapper_types.hpp
Implementation/: libgrpcwrapper.cpp  libgrpcwrapper_base.cpp  libgrpcwrapper_base.hpp  libgrpcwrapper_connectinstance.cpp  libgrpcwrapper_connection.cpp  libgrpcwrapper_connection.hpp  libgrpcwrapper_connectioninstance.hpp  libgrpcwrapper_message.cpp  libgrpcwrapper_message.hpp  libgrpcwrapper_protocol.cpp  libgrpcwrapper_protocol.hpp  libgrpcwrapper_request.cpp  libgrpcwrapper_request.hpp  libgrpcwrapper_response.cpp  libgrpcwrapper_response.hpp
Interfaces/: libgrpcwrapper_abi.hpp  libgrpcwrapper_interfaceexception.cpp  libgrpcwrapper_interfaceexception.hpp  libgrpcwrapper_interfacejournal.cpp  libgrpcwrapper_interfacejournal.hpp  libgrpcwrapper_interfaces.hpp  libgrpcwrapper_interfacewrapper.cpp  libgrpcwrapper_types.hpp
TestApp/: MinimalTest.cpp
